kubernetes/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-test-web-app
  namespace: test
spec:
  selector:
    matchLabels:
      app: python-test-web-app
  template:
    metadata:
      labels:
        app: python-test-web-app
    spec:
      containers:
      - name: python-test-web-app
        image: <image_name>:<image_tag>
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "10m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: python-test-web-app
spec:
  selector:
    app: python-test-web-app
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
