kubernetes/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-test-web-app-ingress
  namespace: test
  labels:
    name: python-test-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: <test-python.domain.com>
    http:
      paths:
      - pathType: Prefix
        path: "/message"
        backend:
          service:
            name: python-test-web-app
            port: 
              number: 8080
